@@ -119,6 +119,10 @@ public:
     static QString stripColorsTags(QString s);
 #endif
 
+	//! Returns an int with the version number of Qt at run-time.
+    //! If version is 4.3.2 it returns 40302.
+	static int qtVersion();
+
 private:
 	static QString logs;
 	static QString app_path;
